# pytest-celery

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  CONTRIBUTORS.txt  Changelog.rst  LICENSE  README.rst  noxfile.py  pyproject.toml  pytest_celery.py  setup.py  tox.ini
.github/: CODEOWNERS  FUNDING.yml  opencollective.yml
.github/ISSUE_TEMPLATE/: Bug-Report.md  Documentation-Bug-Report.md  Feature-Request.md  config.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  deploy.yml  docker.yml  examples.yml  linter.yml  parallel-support.yml  python-package.yml  semgrep.yml  tests.yml  update-poetry-lock.yml
docs/: Makefile  build.sh  conf.py  copyright.rst  faq.rst  glossary.rst  index.rst
docs/_templates/: sidebardonations.html
docs/devguide/: index.rst  introduction.rst  local-development-environment.rst  release.rst  sphinx.rst  tbd.rst  tox.rst
docs/getting-started/: first-steps.rst  help.rst  index.rst  introduction.rst  next-steps.rst  tbd.rst  vendors.rst
docs/getting-started/examples/: django.rst  index.rst  myworker.rst  rabbitmq_management.rst  range.rst
docs/getting-started/resources/: index.rst  tbd.rst
docs/includes/: help.txt  installation.txt  worker-breakdown.txt
docs/reference/: index.rst  pytest_celery.api.rst  pytest_celery.fixtures.rst  pytest_celery.rst  pytest_celery.vendors.localstack.rst  pytest_celery.vendors.memcached.rst  pytest_celery.vendors.rabbitmq.rst  pytest_celery.vendors.redis.backend.rst  pytest_celery.vendors.redis.broker.rst  pytest_celery.vendors.redis.rst  pytest_celery.vendors.rst  pytest_celery.vendors.worker.content.rst  pytest_celery.vendors.worker.rst
docs/userguide/: advanced-installation.rst  app-conf.rst  celery-bug-report.rst  default-tasks.rst  index.rst  setup-matrix.rst  signals.rst  tasks.rst  tbd.rst  utils-module.rst
docs/userguide/examples/: django.rst  hybrid_setup.rst  index.rst  myutils.rst  myworker.rst  rabbitmq_management.rst  range.rst  vhost.rst  worker_pool.rst
docs/userguide/resources/: first-class-citizen.rst  index.rst
examples/: celery_bug_report.py  test_examples.py
examples/django/: pytest.ini  requirements.txt
examples/django/demoapp/: tasks.py
examples/django/proj/: celery.py  settings.py  urls.py  wsgi.py
examples/django/tests/: DjangoWorker.Dockerfile  conftest.py  test_tasks.py
examples/hybrid_setup/: requirements.txt
examples/hybrid_setup/tests/: conftest.py  test_hybrid_setup.py
examples/marker_examples/: test_examples.py
examples/markers/tests/: conftest.py  tasks.py  test_examples.py
examples/myutils/: requirements.txt
examples/myutils/tests/: conftest.py  myutils.py  test_myutils.py
examples/myworker/: requirements.txt
examples/myworker/tests/: conftest.py  test_myworker.py
examples/rabbitmq_management/: requirements.txt
examples/rabbitmq_management/tests/: conftest.py  test_management_broker.py
examples/range/: requirements.txt
examples/range/tests/: conftest.py  test_range.py  test_range_cluster.py
examples/vhost/: requirements.txt
examples/vhost/tests/: conftest.py  test_vhost.py
examples/worker_pool/: Dockerfile  requirements.txt  tasks.py
examples/worker_pool/tests/: test_gevent_pool.py  test_solo_pool.py
pytest_celery/: compat.py  fixtures.py  markers.py  plugin.py
pytest_celery/contrib/: pytest.py
pytest_celery/contrib/testing/: app.py  manager.py  worker.py
pytest_celery/healthchecks/: __init__.py  connection.py  disk.py
pytest_celery/message_brokers/: message_broker.py  redis_broker.py
pytest_celery/message_brokers/subclasses/: redis_broker.py
pytest_celery/nodes/: __init__.py  base.py  node.py
pytest_celery/nodes/message_brokers/: __init__.py  base.py  redis.py
pytest_celery/test_services/: __init__.py  base.py  mixins.py
pytest_celery/test_services/message_brokers/: __init__.py  base.py  kafka.py  rabbitmq.py  redis.py  redis_broker.py  utils.py
pytest_celery/test_services/mixins/: __init__.py  rabbitmq.py  redis.py
pytest_celery/test_services/nodes/: __init__.py  base.py  message_broker_node.py
pytest_celery/test_services/result_backends/: __init__.py  base.py  rabbitmq.py  redis.py
pytest_celery/utils/: compat.py
src/pytest_celery/: __init__.py  defaults.py  plugin.py  utils.py
src/pytest_celery/api/: __init__.py  backend.py  base.py  broker.py  container.py  setup.py  worker.py
src/pytest_celery/components/: __init__.py
src/pytest_celery/containers/: __init__.py  rabbitmq.py  redis.py  worker.py
src/pytest_celery/fixtures/: __init__.py  backend.py  broker.py  setup.py  worker.py
src/pytest_celery/vendors/: __init__.py
tests/: conftest.py  defaults.py  tasks.py  test_pytest_celery.py
tests/common/: test_setup.py
tests/common/celery4/: Dockerfile  api.py  fixtures.py
tests/functional/: test_message_broker_components.py  test_message_brokers.py  test_rabbitmq.py  test_test_services.py
tests/integration/: conftest.py  multi_setup.py  test_defaults.py  test_demo.py
tests/integration/api/: test_backend.py  test_base.py  test_broker.py  test_cluster.py  test_container.py  test_setup.py  test_worker.py
tests/integration/components/: test_backend.py  test_broker.py  test_components.py  test_rabbitmq.py  test_redis.py  test_worker.py
tests/integration/containers/: test_container.py  test_rabbitmq.py  test_redis.py  test_worker.py
tests/integration/markers/: test_message_broker_marker.py
tests/integration/setup/: test_custom_setup.py  test_setup.py
tests/integration/vendors/: test_default_tasks.py  test_localstack.py  test_memcached.py  test_rabbitmq.py  test_redis.py  test_worker.py
tests/markers/: test_message_broker_marker.py
tests/smoke/: conftest.py  signals.py  tasks.py  test_acceptance.py  test_canvas.py  test_control.py  test_failover.py  test_setup.py  test_signals.py  test_task.py  test_worker.py
tests/smoke/acceptance/: conftest.py  test_canvas.py
tests/unit/: conftest.py
tests/unit/api/: test_backend.py  test_base.py  test_broker.py  test_cluster.py  test_container.py  test_setup.py  test_worker.py
(+129 files in other folders)
