[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.idea
  | \.vscode
  | \.github
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120

[tool.autoflake]
check = true

[tool.isort]
line_length = 120
multi_line_output = 7
profile = "black"
force_single_line = true

[tool.flake8]
max-line-length = 120

[tool.poetry]
authors = [
    "Tomer Nosrati <tomer.nosrati@gmail.com>",
    "Omer Katz <omer.katz@omerkatz.com>",
    "Thomas Grainger <pytest-celery@graingert.co.uk>",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Testing",
    "Framework :: Celery",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]

description = "Pytest plugin for Celery"
homepage = "https://github.com/celery/pytest-celery"
license = "BSD"
name = "pytest-celery"
version = "1.0.0b1"

[tool.poetry_bumpversion.file."src/pytest_celery/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."README.rst"]
search = ':Version: {current_version}'
replace = ':Version: {new_version}'

[tool.poetry.dependencies]
python = ">= 3.8,<4.0"
celery = { version = "<6.0.0", extras = [
    "redis",
    "pymemcache",
], optional = true }
retry = "^0.9.2"
pytest-docker-tools = "^3.1.3"
docker = "^7.0.0"
psutil = "^5.9.7"
setuptools = "^69.1.0"

[tool.poetry.extras]
celery = ["celery"]

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
poetry-bumpversion = "^0.3.2"
black = "*"
toml-sort = "^0.23.1"
autoflake = [
    { version = "^1.7.0", python = "<3.8.1" },
    { version = "^2.0.0", python = ">=3.8.1,<4.0" },
]
isort = [
    { version = "^5.11.0", python = "<3.8.0" },
    { version = "^5.12.0", python = ">=3.8.0,<4.0" },
]
flake8 = [
    { version = "^5.0.0", python = "<3.8.1" },
    { version = "^6.0.0", python = ">=3.8.1,<4.0" },
]
pre-commit = [
    { version = "^2.21.0", python = "<3.8.0" },
    { version = "^3.1.0", python = ">=3.8.0,<4.0" },
]
mypy = "^1.0.1"
types-redis = "^4.5.4.1"
cleanpy = "^0.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
coverage = "^7.0.0"
pytest-sugar = { version = "^1.0.0", python = ">=3.8,<4.0" }
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
pytest-subtests = "^0.11.0"
pytest-rerunfailures = "^13.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
tox = [
    { version = "^3.0.0", python = "<3.8.1" },
    { version = "^4.0.0", python = ">=3.8.1,<4.0" },
]
tox-gh-actions = [
    { version = "^2.0.0", python = "<3.8.1" },
    { version = "^3.0.0", python = ">=3.8.1,<4.0" },
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx_celery = "^2.1.3"
Sphinx = [
    { version = "^7.1.0", python = "<3.9" },
    { version = "^7.0.0", python = ">=3.9,<4.0" },
]
sphinx-testing = "^1.0.1"
sphinx-click = "^5.1.0"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry.plugins.pytest11]
celery = "pytest_celery.plugin"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--capture=no",
    "--cov=src",
    "--cov-report=xml",
    "--cov-report",
    "term",
]
minversion = "7.0"
testpaths = "tests"
python_classes = "test_*"
xfail_strict = true

[tool.mypy]
warn_unused_configs = true
strict = false
follow_imports = "skip"
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[tool.coverage.run]
branch = true
cover_pylib = false
source = ["src"]
omit = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "except ImportError:",
    '__version__ = ".*"',
]
omit = ["*/python?.?/*", "*/site-packages/*", "*/pypy/*"]
